<resources>
    <string name="app_name">User</string>
    <string name="title">Administrator Profile</string>
    <string name="firstName">Izabela</string>
    <string name="lastName">Barbosa</string>
    <string name="titleName">Miss</string>
    <string name="state">Minas Gerais</string>
    <string name="country">Brasil</string>
    <string name="info">Contatos</string>
    <string name="email">izabelacecilia275@gmail.com</string>
    <string name="number">(031) 7362–6658</string>
    <string name="userName">icecilia007</string>
    <string name="data_txt">Data de Nascimento:</string>
    <string name="date">01/10/2003</string>
    <string name="idade_txt">Idade:</string>
    <string name="idade">19</string>
    <string name="address">Endereço</string>
    <string name="street">Aracy,</string>
    <string name="number_street">1004</string>
    <string name="rua_txt">R.</string>
    <string name="city">Belo Horizonte</string>
    <string name="nationality">BR</string>
    <string name="time_zone">-3:00</string>
    <string name="number_phone">(31) 3475 8900</string>
    <string name="registered">Dados de Registro</string>
    <string name="data_registered_txt">Data:</string>
    <string name="date_registered">20/07/2022</string>
    <string name="year_registered_txt">Tempo:</string>
    <string name="year_registered">01</string>
    <string name="dados">Dados Pessoais</string>
    <string name="query">Tamanho da consulta</string>
    <string name="year_txt">anos</string>
    <string name="userPassword">lindasenha</string>
</resources>