<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/text_margin_small"
    style="@style/CustomComponentItem">

    <TextView
        android:id="@+id/titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleName"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/firstName">
    </TextView>

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@id/lastName"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="@dimen/text_margin_medium"
        app:layout_constraintStart_toEndOf="@id/titleName"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/text_margin_small"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="titleName,firstName,lastName"/>
    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/state"
        app:layout_constraintTop_toBottomOf="@+id/barrierName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/country">
    </TextView>
    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/country"
        android:layout_marginStart="@dimen/text_margin_small"
        app:layout_constraintTop_toBottomOf="@+id/barrierName"
        app:layout_constraintStart_toEndOf="@id/state"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="state,country"/>
    <TextView
        android:id="@+id/titleInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/info"
        android:layout_marginStart="@dimen/text_margin_small"
        app:layout_constraintTop_toBottomOf="@id/barrierLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/email"
        android:layout_marginStart="@dimen/text_margin_small"
        app:layout_constraintTop_toBottomOf="@id/titleInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/number"
        android:layout_marginStart="@dimen/text_margin_small"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>